# github-labels

./: .gitignore  .gitlint  .pre-commit-config.yaml  ChangeLog.rst  MANIFEST.in  Pipfile  README.rst  pyproject.toml  pytest.ini  sample.yaml  setup.cfg  setup.py
github_labels/: __init__.py  cli.py  logger.py  main.py  term.py  version.py
