[metadata]
name = github-labels
# TODO Set your project version here
# One can use `attr: mypkg.__version__`, but make sure you have the
# corresponding `import` in `setup.py`
version = 0.1.0
description = Mass-setting labels to Github repositories
description-file = README.rst
long-description = file: README.rst
url = http://github.com/zaufi/github-labels
author = Alex Turbov
author-email = i.zaufi@gmail.com
maintainer = Alex Turbov
maintainer-email = i.zaufi@gmail.com
keywords =
    github
    labels
license = GPL-3
license-file = LICENSE
platforms = all
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages =
    github_labels
install_requires =
    Click
    colorful
    exitstatus
    PyGithub
    PyXDG
    truecolor
    ycfg
tests_require =
    pytest
    pytest-cov
zip_safe = True

[options.entry_points]
console_scripts = github-labels = github_labels.main:main

[wheel]
universal = 1
