[metadata]
name = github-labels
# TODO Set your project version here
# One can use `attr: mypkg.__version__`, but make sure you have the
# corresponding `import` in `setup.py`
version = 0.2.0
description = Mass-setting labels to Github repositories
description_file = README.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/zaufi/github-labels
author = Alex Turbov
author_email = i.zaufi@gmail.com
maintainer = Alex Turbov
maintainer_email = i.zaufi@gmail.com
keywords =
    github
    labels
license = GPL-3
license_files = LICENSE
platforms = all
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Utilities

[options]
packages =
    github_labels
install_requires =
    click ~= 8.0
    exitstatus
    PyGithub
    ycfg
python_requires = >=3.8
zip_safe = True

[options.entry_points]
console_scripts = github-labels = github_labels.main:main

[wheel]
universal = 1
